--- a/snakepit/index.html
+++ b/snakepit/index.html
@@ -1,60 +1,67 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Async demo</title>
+<title>Snakepit</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script type="text/javascript">
     var ws;
+    var playerName;
+
     $().ready(function () {
+
         $("#btnConnect").click(function () {
+            playerName = $("#playerName").val()
+            $("#status").text("connecting...");
 
-            $("#status").text("connecting");
+            ws = new WebSocket("ws://127.0.0.1:8080/connect");
+            ws.onopen = function (){
+                $("#status").text("connected to server");
+            };
+            ws.onerror = function (e) {
+                $("#status").text(e.message);
+            };
+            ws.onmessage = function (e) {
+                $("#status").text(e.data);
+            };
 
-            ws = new WebSocket("ws://127.0.0.1:8080/echo");
-            ws.onopen = function () {
-                $("#status").text("connected");
-            };
-            ws.onmessage = function (evt) {
-                $("#status").text(evt.data);
-            };
-            ws.onerror = function (evt) {
-                $("#status").text(evt.message);
-            };
-            ws.onclose = function () {
-                $("#status").text("disconnected");
-            };
+            $(document).bind("keypress", keyHandler)
+
         });
 
-        $(document).keypress(function( event ) {
-            if ( event.which == 13 ) {
+        var keyHandler = function (event) {
+            var code = event.which ? event.which : event.keyCode;
+            if ( code == 13 ) {
                 event.preventDefault();
             }
             if (ws && ws.readyState == WebSocket.OPEN) {
-                ws.send(event.which + ", " + event.key);
+                ws.send(code);
             }
             else {
                 $("#status").text("Connection is closed");
             }
-        });
+        };
 
         $("#btnDisconnect").click(function () {
             ws.close();
+            $(document).unbind("keypress", keyHandler)
         });
     });
 </script>
 </head>
 <body>
-<div id="status">&nbsp;</div>
 
-<div>
+<div id="status" style="text-align:left">&nbsp;</div>
 
-<div>
-<button id="btnConnect">Connect</button>
-</div>
+<div style="font-size: 3em;">Snakepit</div>
+<div>ver 0.1</div>
 
-<div>
-<button id="btnDisconnect">Disconnect</button>
+<div style="margin-top:1em">
+
+<div id="connectForm">
+    <span style="color: white">Name</span>
+    <input id="playerName" type="text" maxlength="20" />
+    <button id="btnConnect">Connect</button>
 </div>
 
 </div>
