--- a/snakepit/index.html
+++ b/snakepit/index.html
@@ -15,38 +15,90 @@
             $("#status").text("connecting...");
 
             ws = new WebSocket("ws://127.0.0.1:8080/connect");
-            ws.onopen = function (){
-                $("#status").text("connected to server");
-            };
+            ws.onopen = openHandler;
+            ws.onmessage = messageHandler;
             ws.onerror = function (e) {
                 $("#status").text(e.message);
             };
-            ws.onmessage = function (e) {
-                $("#status").text(e.data);
-            };
-
-            $(document).bind("keypress", keyHandler)
-
         });
-
-        var keyHandler = function (event) {
-            var code = event.which ? event.which : event.keyCode;
-            if ( code == 13 ) {
-                event.preventDefault();
-            }
-            if (ws && ws.readyState == WebSocket.OPEN) {
-                ws.send(code);
-            }
-            else {
-                $("#status").text("Connection is closed");
-            }
-        };
 
         $("#btnDisconnect").click(function () {
             ws.close();
-            $(document).unbind("keypress", keyHandler)
+            $("#playScreen").hide();
+            $("#connectForm").show();
+            $(document).unbind("keypress", keyHandler);
         });
     });
+
+    function sendMessage(msgArray) {
+        var msg = JSON.stringify(msgArray);
+        ws.send(msg);
+    }
+
+    function openHandler(e){
+        $("#status").text("connected to server");
+        playerName = $('#playerName').val();
+
+        sendMessage(["new_player", playerName]);
+
+        $("#connectForm").hide();
+        $("#playScreen").show();
+
+        $(document).bind("keypress", keyHandler);
+
+    }
+
+    function messageHandler(e){
+        //$("#status").text(e.data);
+        json = JSON.parse(e.data);
+        if (!(json[0] instanceof Array))
+            json = [json]
+
+        for(var i = 0; i < json.length; i++){
+            var args = json[i];
+            var cmd = json[i][0];
+            switch(cmd){
+                case("handshake"):
+                    $("#username").text(args[1]);
+                    break
+                case("world"):
+                    initWorld(args[1]);
+                    break
+            }
+        }
+    }
+
+    function initWorld(data) {
+        var rows = [];
+        for(var y = 0; y < data.length; y++){
+            var row = "";
+            for(var x = 0; x < data[y].length; x++){
+                symbol = data[y][x][0];
+                color = data[y][x][1];
+                if(symbol == " ")
+                    symbol = "&nbsp;";
+                row += '<td id="cell' + y + '_' + x +
+                    '" class="color' + color + '">' + symbol + '</td>';
+            }
+            rows.push("<tr>" + row + "</tr>");
+        }
+        var tableContent = rows.join("\n");
+        $("#world").html(tableContent);
+    }
+
+    function keyHandler(event) {
+        var code = event.which ? event.which : event.keyCode;
+        if ( code == 13 ) {
+            event.preventDefault();
+        }
+        if (ws && ws.readyState == WebSocket.OPEN) {
+            ws.send(code);
+        }
+        else {
+            $("#status").text("Connection is closed");
+        }
+    }
+
 </script>
 </head>
 <body>
@@ -57,12 +109,30 @@
 <div>ver 0.1</div>
 
 <div style="margin-top:1em">
+    <div id="connectForm">
+        <span style="color: white">Name</span>
+        <input id="playerName" type="text" maxlength="20" />
+        <button id="btnConnect">Connect</button>
+    </div>
 
-<div id="connectForm">
-    <span style="color: white">Name</span>
-    <input id="playerName" type="text" maxlength="20" />
-    <button id="btnConnect">Connect</button>
-</div>
+    <div id="playScreen">
+        <div id="userForm">
+            Welcome to the server, <span id="username"></span>! Press "Join" to start game.
+        </div>
+        <div id="userButtons">
+            <button id="btnJoin">Join!</button>
+            <button id="btnDisconnect">Close</button>
+        </div>
+
+        <div id="playField">
+            <div id="activePlayers">player name</div>
+            <div id="worldHolder">
+                <table id="world" cellspacing="0" cellpadding="0"></table>
+            </div>
+        </div>
+
+    </div>
+
 
 </div>
 
